swagger docs for goalz done
