# Goalz Project Backend/models/goalzModel.js
@@ -3,11 +3,39 @@
     // 3rd party
         import mongoose from "mongoose";
 
-    // custom 
-        import goalSchema from "../other_modules/schemas/goalSchema.js";
-
 // create schema for goalz objects to follow using the schema class from the mongoose object
-    const goalzSchema = new mongoose.Schema(goalSchema);
+    const goalzSchema = new mongoose.Schema({
+        goalTitle: {
+            type: String,
+            required: true
+        },
+        goalOwner: {
+            type: String,
+            required: true
+        },
+        startDate: {
+            type: Date,
+            required: false
+        },
+        completeByDate: {
+            type: Date,
+            required: true
+        },
+        belongsToValue: {
+            type: String,
+            required: true
+        },
+        urgentImportantRating: {
+            type: Number,
+            min: 1,
+            max: 10
+        },
+        goalCompleted: {
+            type: Boolean,
+            required: true,
+            default: false
+        }
+    });
 
 // create and export a mongoose model object that uses this schema
     const goalzModel = mongoose.model("goalz", goalzSchema, "goalz");
